# OpenAI-AutoPowerPoint

./: .gitignore  README.md  pyproject.toml
notebooks/: Data Governance.pptx  openaiApi.ipynb  powerPoint.ipynb  presentation.pptx  slide1.pptx
