[tool.poetry]
name = "AutoPPX"
version = "0.1.0"
description = ""
authors = ["Yannick Aaron Lehr <yannick.lehr@ioki.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.1"
python-pptx = "^0.6.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^2.21.0"
pylint = "^2.15.10"
black = "^22.12.0"
isort = "^5.11.4"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"
ipykernel = "^6.20.2"
ipynbname = "^2021.3.2"
notebook = "^6.5.2"
toml = "^0.10.2"
nbqa = "^1.6.1"
pyupgrade = "^3.3.1"
mypy = "^0.991"
ipywidgets = "^8.0.4"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
